--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: hedomy0
+name: hedomy
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
@@ -23,24 +23,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cloud_firestore: any
-
+  image_picker:
+  fluttertoast: ^8.0.7
+  path:
+  firebase_database:
+  firebase_core: ^1.2.0
+  cloud_firestore: ^2.2.0
+  firebase_auth: ^1.2.0
+  firebase_storage: ^8.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  firebase_database: "^6.0.0"
-  http:
-
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  firebase_core: ^0.7.0
-  firebase_analytics: ^7.0.1
-  firebase_auth: ^0.20.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -48,16 +47,15 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
 
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+#  assets:
+#
+#     - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
